<resources>
    <string name="app_name">용봉문고</string>
    <string name="splash_subtitle">책과 지식이 머무는 곳, 용봉문고</string>
    <string name="go_book_list">상품 목록 보기</string>
    <string name="go_last_book">마지막 본 상품</string>
    <string name="home_cart_button">장바구니 확인</string>
    <string name="home_login_button">로그인</string>
    <string name="home_welcome_message">용봉문고에 오신 것을 환영합니다.</string>
    <string name="home_welcome_subtitle">중고 도서와 신간 도서를 한곳에서 둘러보세요.</string>
    <string name="drawer_opened">메뉴가 열렸습니다.</string>
    <string name="drawer_closed">메뉴가 닫혔습니다.</string>
    <string name="menu_home">홈으로</string>
    <string name="menu_book_list">상품 목록</string>
    <string name="menu_cart">장바구니</string>
    <string name="menu_book_memo">이 책 메모</string>
    <string name="menu_my_page">마이페이지</string>
    <string name="menu_jnu_site">전남대 홈페이지</string>
    <string name="menu_aladin_best">알라딘 베스트</string>
    <string name="menu_app_info">앱 정보</string>
    <string name="current_home">현재 홈 화면입니다.</string>
    <string name="current_book_list">현재 상품 목록 화면입니다.</string>
    <string name="current_cart">현재 장바구니 화면입니다.</string>
    <string name="current_my_page">현재 마이페이지 화면입니다.</string>
    <string name="menu_move_format">%1$s 화면으로 이동합니다.</string>
    <string name="option_app_info_toast">용봉문고 앱 정보를 확인합니다.</string>
    <string name="book_list_search_surface">검색어를 입력하세요</string>
    <string name="list_chip_all">전체</string>
    <string name="list_chip_major">전공·일반</string>
    <string name="category_all">전체</string>
    <string name="category_it">전공/IT</string>
    <string name="category_kotlin">Kotlin</string>
    <string name="category_android">Android</string>
    <string name="category_comic">만화</string>
    <string name="category_novel">소설</string>
    <string name="category_economy">경제경영</string>
    <string name="category_world">세계문학</string>
    <string name="category_genre">장르소설</string>
    <string name="category_script">대본집</string>
    <string name="book_detail_title">상품 상세</string>
    <string name="my_page_title">마이페이지</string>
    <string name="cart_title">장바구니</string>
    <string name="shipping_title">배송정보</string>
    <string name="order_sheet_title">주문서</string>
    <string name="list_guide">중고 상품과 신간 베스트셀러를 함께 정리했습니다.</string>
    <string name="search_result_format">%1$s 검색 결과: %2$d권</string>
    <string name="book_author_format">저자: %1$s</string>
    <string name="book_original_price_format">정가: %1$,d원</string>
    <string name="book_price_format">판매가: %1$,d원</string>
    <string name="detail_author_format">저자: %1$s</string>
    <string name="detail_original_price_format">정가: %1$,d원</string>
    <string name="detail_price_format">판매가: %1$,d원</string>
    <string name="detail_date_format">출판일: %1$s</string>
    <string name="detail_condition_format">상품 상태: %1$s</string>
    <string name="detail_shipping_format">배송 안내: %1$s</string>
    <string name="detail_info_title">상품 정보</string>
    <string name="detail_trade_title">상품 설명</string>
    <string name="no_last_book">아직 본 상품이 없습니다.</string>
    <string name="app_info_title">용봉문고</string>
    <string name="app_info_message">용봉문고는 중고 도서와 신간 도서를 함께 다루는 통합 도서 쇼핑몰입니다.\n전공서, 문학, 만화, 경제경영, 베스트셀러까지 한 화면에서 둘러보고 장바구니에 담을 수 있습니다.</string>
    <string name="dialog_ok">확인</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_yes">이동</string>
    <string name="dialog_no">계속 보기</string>
    <string name="buy_dialog_title">구매 안내</string>
    <string name="buy_dialog_message">선택한 책을 장바구니에 담거나 바로 구매로 주문 정보를 입력할 수 있습니다.</string>
    <string name="buy_info_button">구매안내</string>
    <string name="favorite_button">장바구니 담기</string>
    <string name="saved_favorite">장바구니에 담았습니다.</string>
    <string name="cart_move_question">장바구니로 이동하시겠습니까?</string>
    <string name="cart_count_format">장바구니 상품: %1$d권</string>
    <string name="cart_empty">장바구니가 비어 있습니다.</string>
    <string name="cart_total_format">합계: %1$,d원</string>
    <string name="cart_item_price_format">단가 %1$,d원</string>
    <string name="cart_item_quantity_format">수량 %1$d개</string>
    <string name="cart_item_subtotal_format">소계 %1$,d원</string>
    <string name="cart_delete_title">상품 삭제</string>
    <string name="cart_delete_message">선택한 상품을 장바구니에서 삭제하시겠습니까?</string>
    <string name="cart_deleted">장바구니에서 삭제했습니다.</string>
    <string name="cart_quantity_minus">-</string>
    <string name="cart_quantity_plus">+</string>
    <string name="cart_delete_button">삭제</string>
    <string name="cart_order_button">배송정보 입력</string>
    <string name="cart_keep_shopping">상품 더 보기</string>
    <string name="cart_summary_title">확인 금액</string>
    <string name="shipping_name_hint">받는 사람 이름</string>
    <string name="shipping_phone_hint">연락처(010-1234-1234)</string>
    <string name="shipping_zip_hint">우편번호(12345)</string>
    <string name="shipping_address_hint">배송 주소(광주광역시 북구 용봉동 77)</string>
    <string name="shipping_next_button">주문서 확인</string>
    <string name="shipping_guide">택배 배송에 필요한 정보만 입력하세요.</string>
    <string name="shipping_empty_message">이름, 연락처, 우편번호, 주소를 모두 입력하세요.</string>
    <string name="order_dialog_title">확인 완료</string>
    <string name="order_dialog_message">주문서 확인이 완료되었습니다. 주문 내역은 장바구니와 배송 정보 기준으로 정리되었습니다.</string>
    <string name="order_total_format">총액: %1$,d원</string>
    <string name="order_complete_button">확인 완료</string>
    <string name="order_notice">주문 내용을 확인한 뒤 완료 버튼을 누르세요.</string>
    <string name="order_item_line">%1$s / %2$d개 / %3$,d원</string>
    <string name="order_shipping_info_title">배송지 정보</string>
    <string name="order_items_title">주문 상품</string>
    <string name="login_title">로그인</string>
    <string name="login_guide">주문과 내서재 이용을 위한 로그인</string>
    <string name="login_student_id_hint">아이디</string>
    <string name="login_name_hint">이름</string>
    <string name="login_password_hint">비밀번호</string>
    <string name="login_button">로그인</string>
    <string name="logout_button">로그아웃</string>
    <string name="login_empty_message">아이디, 이름, 비밀번호를 모두 입력하세요.</string>
    <string name="login_success_message">%1$s님 로그인되었습니다.</string>
    <string name="logout_message">로그아웃되었습니다.</string>
    <string name="login_status_format">%1$s님 로그인 중\n아이디: %2$s</string>
    <string name="login_scope_note">입력한 로그인 상태는 앱 안에 저장되어 주문과 내서재 화면에서 사용됩니다.</string>
    <string name="jnu_home_url">https://www.jnu.ac.kr</string>
    <string name="aladin_best_url">https://www.aladin.co.kr/shop/common/wbest.aspx?BranchType=1</string>
    <string name="open_external_error">열 수 있는 브라우저 앱이 없습니다.</string>
    <string name="home_profile_icon">●</string>
    <string name="home_tab_recommend">추천</string>
    <string name="home_tab_following">랜덤 추천</string>
    <string name="home_chip_post">포스트</string>
    <string name="home_chip_review">한 줄 리뷰</string>
    <string name="home_avatar">▣</string>
    <string name="home_feed_user">용봉북 큐레이터</string>
    <string name="home_feed_meta">하이라이트 · 방금 전</string>
    <string name="home_follow_button">팔로우</string>
    <string name="home_feed_book_title">Do it! 깡샘의 안드로이드 앱 프로그래밍</string>
    <string name="home_feed_book_author">강성윤</string>
    <string name="home_feed_quote">“Activity와 Intent가 따로 노는 순간,\n앱은 화면이 아니라 흐름으로 이해된다.”</string>
    <string name="home_last_viewed_title">마지막에 본 상품</string>
    <string name="home_last_viewed_button">다시 보기</string>
    <string name="home_no_last_viewed">아직 본 상품이 없습니다</string>
    <string name="home_last_viewed_empty_meta">상품을 누르면 여기에 기록됩니다</string>
    <string name="home_recent_viewed_title">최근에 본 상품</string>
    <string name="home_recent_viewed_empty">상세 화면을 열어 본 책이 여기에 차곡차곡 쌓입니다.</string>
    <string name="barcode_icon_text_safe">ISBN</string>
    <string name="book_recommend_keywords">추천 검색</string>
    <string name="recommend_search_toast">아래 추천어를 누르면 관련 책 목록이 바로 열립니다.</string>
    <string name="list_keyword_android">소설</string>
    <string name="list_keyword_kotlin">코틀린</string>
    <string name="list_keyword_cheap">중고 특가</string>
    <string name="list_keyword_clean">상태 좋은 책</string>
    <string name="book_status_filter_title">상태별 보기</string>
    <string name="status_all">전체</string>
    <string name="status_new">새책</string>
    <string name="status_used">중고</string>
    <string name="status_marked">필기/밑줄</string>
    <string name="status_reserved">예약 상품</string>
    <string name="sort_price_low">가격 낮은순</string>
    <string name="sort_price_high">가격 높은순</string>
    <string name="sort_title">이름순</string>
    <string name="book_shortcut_title">바로가기</string>
    <string name="ranking_icon_text_safe">1</string>
    <string name="new_book_icon_text">N</string>
    <string name="book_shortcut_ranking">도서 랭킹</string>
    <string name="book_shortcut_new">랜덤 추천</string>
    <string name="book_category_tab">카테고리</string>
    <string name="detail_tax_badge">소득공제</string>
    <string name="detail_rating_format">★★★★★ %1$.1f (%2$d) · 판매지수 %3$,d</string>
    <string name="detail_payment_banner">이달의 혜택 모음 · 도서 구매 포인트 적립</string>
    <string name="detail_buy_now">바로구매</string>
    <string name="book_memo_title">이 책 메모</string>
    <string name="book_memo_empty">아직 이 책에 남긴 메모가 없습니다.</string>
    <string name="book_memo_hint">예) 이 책에서 기억하고 싶은 문장</string>
    <string name="book_memo_added">이 책 메모를 추가했습니다.</string>
    <string name="random_reason_format">랜덤 추천 사유: %1$s</string>
    <string name="my_library_title">내서재</string>
    <string name="my_bubble_text">읽은 문장도\n기록해 보세요!</string>
    <string name="my_profile_name">용봉동 책수집_78105</string>
    <string name="my_profile_login_required">로그인을 하세요</string>
    <string name="my_profile_login_required_message">로그인하면 장바구니와 주문 흐름을 이어서 확인할 수 있습니다.</string>
    <string name="my_profile_logged_in_format">%1$s님의 내서재</string>
    <string name="my_stat_highlight">0\n하이라이트</string>
    <string name="my_stat_post">0\n포스트</string>
    <string name="my_stat_review">0\n한 줄 리뷰</string>
    <string name="my_stat_write">0\n필기</string>
    <string name="my_write_button">+ 글쓰기</string>
    <string name="my_shelf_button">장바구니 보기</string>
    <string name="my_yellow_banner_title">다양한 책들이 기다리고 있어요!</string>
    <string name="my_yellow_banner_message">지금 바로 용봉문고를 둘러보세요</string>
    <string name="arrow_right_text">›</string>
    <string name="cart_select_all">전체선택</string>
    <string name="cart_delivery_group">용봉24배송</string>
    <string name="cart_delivery_fee">배송비 0원</string>
    <string name="cart_free_shipping_line">무료배송 금액을 충족하셨어요!</string>
    <string name="nav_today">투데이</string>
    <string name="nav_market">도서</string>
    <string name="nav_search">검색</string>
    <string name="nav_feed">메모</string>
    <string name="nav_library">내서재</string>
    <string name="buy_now_added">바로구매 상품을 주문서에 담았습니다.</string>
    <string name="memo_dialog_title">책 메모</string>
    <string name="memo_dialog_subtitle">읽다가 남기고 싶은 문장을 차곡차곡 모아 둡니다.</string>
    <string name="memo_saved_title">저장된 메모</string>
    <string name="memo_new_title">새 메모</string>
    <string name="memo_hint_example">예) 이 문장은 다시 읽을 때 표시해 두기 좋다</string>
    <string name="memo_add_button">추가</string>
    <string name="memo_close_button">닫기</string>
    <string name="memo_delete_button">삭제</string>
    <string name="memo_delete_all_button">전체 삭제</string>
    <string name="memo_clear_all_toast">메모를 모두 삭제했습니다.</string>
    <string name="memo_added_toast">메모를 추가했습니다.</string>
    <string name="memo_empty">아직 저장된 메모가 없습니다.</string>
    <string name="all_books_reset_toast">전체 도서 목록을 다시 보여줍니다.</string>
    <string name="recommend_reason_new">신간 베스트라 추천합니다.</string>
    <string name="recommend_reason_low_price">가격 부담이 낮아서 가볍게 담아 보기 좋습니다.</string>
    <string name="recommend_reason_marked">필기 흔적이 있어 학습용으로 참고하기 좋습니다.</string>
    <string name="recommend_reason_rating">별점이 높아 만족도가 좋은 편입니다.</string>
    <string name="recommend_reason_develop">앱 개발 공부 흐름에 이어서 읽기 좋은 책입니다.</string>
    <string name="recommend_reason_major_format">%1$s 분야를 넓혀 보기 좋은 책입니다.</string>
</resources>