<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 검색은 목록 화면 상단 입력창에서 바로 처리한다. Toolbar 돋보기는 중복이라 뺐다. -->
    <!-- 홈 화면으로 돌아가는 메뉴이다. -->
    <item
        android:id="@+id/menu_home"
        android:title="@string/menu_home"
        app:showAsAction="never" />

    <!-- 현재 화면 항목이다. 누르면 목록 화면임을 짧게 알려 준다. -->
    <item
        android:id="@+id/menu_book_list"
        android:title="@string/menu_book_list"
        app:showAsAction="never" />

    <!-- 선택한 책을 확인하는 장바구니 화면으로 이동한다. -->
    <item
        android:id="@+id/menu_cart"
        android:icon="@drawable/icon_cart"
        android:title="@string/menu_cart"
        app:showAsAction="never" />

    <!-- 내서재 화면으로 이동한다. -->
    <item
        android:id="@+id/menu_my_page"
        android:icon="@drawable/icon_myinfo"
        android:title="@string/menu_my_page"
        app:showAsAction="never" />

    <!-- 외부 링크 항목들은 Activity에서 예외 처리를 한 뒤 브라우저로 보낸다. -->
    <item
        android:id="@+id/menu_jnu_site"
        android:icon="@drawable/icon_setting"
        android:title="@string/menu_jnu_site"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_aladin_best"
        android:icon="@drawable/icon_search"
        android:title="@string/menu_aladin_best"
        app:showAsAction="never" />

    <!-- 앱 정보 Dialog를 여는 항목이다. -->
    <item
        android:id="@+id/menu_app_info"
        android:icon="@drawable/icon_dialog"
        android:title="@string/menu_app_info"
        app:showAsAction="never" />
</menu>
